--- a/options/finetune_realesrgan_x4plus_pairdata.yml
+++ b/options/finetune_realesrgan_x4plus_pairdata.yml
@@ -17,9 +17,9 @@ datasets:
   train:
     name: DIV2K
     type: RealESRGANPairedDataset
-    dataroot_gt: datasets/DF2K
-    dataroot_lq: datasets/DF2K
-    meta_info: datasets/DF2K/meta_info/meta_info_DIV2K_sub_pair.txt
+    dataroot_gt: datasets/GT
+    dataroot_lq: datasets/LQ
+    # meta_info: datasets/DF2K/meta_info/meta_info_DIV2K_sub_pair.txt
     io_backend:
       type: disk
 
@@ -141,7 +141,7 @@ logger:
   save_checkpoint_freq: !!float 5e3
   use_tb_logger: true
   wandb:
-    project: ~
+    project: "super_resolution"
     resume_id: ~
 
 # dist training settings
