--- a/options/finetune_realesrgan_x4plus_pairdata.yml
+++ b/options/finetune_realesrgan_x4plus_pairdata.yml
@@ -35,14 +35,14 @@ datasets:
     dataset_enlarge_ratio: 1
     prefetch_mode: ~
 
-  Uncomment these for validation
-  val:
-     name: validation
-     type: PairedImageDataset
-     dataroot_gt: path_to_gt
-     dataroot_lq: path_to_lq
-     io_backend:
-       type: disk
+  # Uncomment these for validation
+  # val:
+  #   name: validation
+  #   type: PairedImageDataset
+  #   dataroot_gt: path_to_gt
+  #   dataroot_lq: path_to_lq
+  #   io_backend:
+  #     type: disk
 
 # network structures
 network_g:
